修复了发布文章时设置私密无效的问题，解决了在safari浏览器中长单词断句导致不兼容的问题,及其他ＵＩ兼容问题

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -141,11 +141,14 @@
 .btn-send{
     cursor: pointer;
     border: none;
-    outline: none;font-size: 16px;
+    outline: none;
+    font-size: 16px;
     float: right;
     width: 120px;
     height: 30px;
-    background: cornflowerblue;
+    background: #6495ED;
+    text-align: center;
+    line-height: 30px;
 }
 .btn-send:hover{
     background: deepskyblue;
