--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -21,7 +21,7 @@
         <input type="text"class="form-input user" placeholder="管理账号">
         <div class="line"></div>
         <input type="password" class="form-input passwd" placeholder="密码" >
-        <input type="button" value="登 录" class="btn-login border-corner">
+        <div class="btn-login border-corner">登 录</div>
         <div class="tip"></div>
     </form>
 
