--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -60,6 +60,8 @@
     border: none;
     outline: none;
     height: 30px;
+    line-height: 30px;
+    text-align: center;
     background: cornflowerblue;
     cursor: pointer;
 }
@@ -115,9 +117,10 @@
     display: table;
     width: 100%;
     background: lightgreen;
-    padding: 3px;
-    font-size: 18px;
+    height: 35px;
+    line-height: 35px;
     text-align: center;
+    font-size: 18px;
 }
 
 .add-tag{
@@ -165,7 +168,9 @@
     margin-left: 5px;
     min-width: 90px;
     height: 25px;
-    padding: 3px 0;
+    /*padding: 3px 0;*/
+    background: transparent;
+    border: 1px solid #999;
 }
 
 #console{
@@ -214,7 +219,7 @@
 .dialog-comment-details-container {
     display: table;
     margin: auto;
-    min-width: 400px;
+    width: 350px;
     background: white;
     padding: 10px;
     margin-top: 50px;
@@ -255,13 +260,16 @@
     cursor: pointer;
 }
 .textarea-replay{
-    width: 100%;
+    /*width: 100%;*/
+    display: block;
     height: 100px;
     border: 1px solid #aaa;
+    width: 100%;
     outline: none;
     margin-top: 10px;
     overflow-y: auto;
     padding: 5px;
+    min-width: 0px;
 }
 .btn-replay{
     float: right;
@@ -269,6 +277,8 @@
     outline: none;
     width: 100px;
     height: 30px;
+    line-height: 30px;
+    text-align: center;
     background: cornflowerblue;
 }
 .btn-replay:hover{
@@ -281,6 +291,8 @@
     outline: none;
     width: 100px;
     height: 30px;
+    line-height: 30px;
+    text-align: center;
     background: grey;
 }
 .replayed-time{
@@ -387,5 +399,11 @@
     }
     .btn-new,.btn-logout{
         margin-right: 10px;
+    }
+    .dialog-comment-details-container {
+        width: 300px;
+    }
+    .btn-replayed{
+        width: 70px;
     }
 }
