--- a/public/css/publish.css
+++ b/public/css/publish.css
@@ -1,4 +1,4 @@
-body{
+html,body{
     overflow: hidden;
 }
 .topbar-container{
@@ -48,6 +48,7 @@ body{
     background: cornflowerblue;
     width: 100%;
     height: 100%;
+    text-align: center;
     font-size: 24px;
     border: none;
     outline: none;
@@ -105,7 +106,7 @@ body{
     outline: none;
     text-align: center;
     color: #333;
-    padding:8px 0;
+    background: transparent;
 }
 .input-container {
     width: 50%;
@@ -204,6 +205,8 @@ body{
 .selector_mode{
     height: 20px;
     width: 100%;
+    background: transparent;
+    border: 1px solid #999;
 }
 .item-btn{
     height: 20px;
@@ -228,7 +231,7 @@ body{
         /*display: none;*/
     }
     .tag-container{
-        min-width: 100px;
+        min-width: 80px;
     }
     .btn-new,.btn-edit{
         margin-left: 10px;
