--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -36,7 +36,7 @@
             <div class="form-label">管理密码</div><div class="form-input"><input type="password" id="password"></div>
         </div>
         <br>
-        <input class="btn-finish border-corner" type="button" value="设&nbsp;置&nbsp;完&nbsp;成" onclick="finish()">
+        <div class="btn-finish border-corner" onclick="finish()">设&nbsp;置&nbsp;完&nbsp;成</div>
         <div id="tip"></div>
     </div>
 
