--- a/views/blog/blog.ejs
+++ b/views/blog/blog.ejs
@@ -18,7 +18,7 @@
     </style>
     <script src="/public/js/external/jquery1.3.2.js"></script>
 </head>
-<body>
+<body onbeforeunload="alert('exit')">
 <div>
     <div id="blog" style="display:none"><%= id %></div>
     <div class="topbar-container bg">
@@ -68,6 +68,8 @@
             <span class="tags" title="标签"><%= tags[tag] %></span>|<span class="blog-time" title="发布时间"><%= time %></span><span class="blog-time" title="阅读量">(<%= visits %>)</span>
         </div>
         <div class="content-container global-text-size" ><%- html %></div>
+        <!-- 私密日志不显示分享组件-->
+        <% if(status!=1) {%>
         <div class="others-container" style="display: block">
             <!-- 代码来自百度分享  http://share.baidu.com/ -->
             <!--<span class="last"> < 上一篇 </span><span class="next">  下一篇 ></span>-->
@@ -75,6 +77,7 @@
             <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"1","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
             <div class="clearFloat"></div>
         </div>
+        <% } %>
 
         <div class="comment-container">
             <div id="input-comment">
@@ -84,7 +87,7 @@
                 <div class="contact-container">
                     <input type="text" placeholder="您的联系邮箱（选填）" value="您的联系邮箱（选填）" class="input-contact">
                 </div>
-                    <input type="button" value="发&nbsp;送" class="btn-send border-corner">
+                    <div class="btn-send border-corner">发&nbsp;送</div>
             </div>
             </div>
             <div class="other-comment-container">
